# CSDN-Analytics

./: DEPLOY.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
backend-go/: .env.example  README.md  csdn_analytics.db  go.mod  go.sum
backend-go/cmd/crawl/: main.go
backend-go/cmd/server/: main.go
backend-go/internal/app/: app.go
backend-go/internal/cli/: crawl.go  crawl_test.go
backend-go/internal/config/: config.go  config_test.go
backend-go/internal/db/: db.go  models.go  models_test.go
backend-go/internal/http/: response.go  router.go
backend-go/internal/http/handlers/: crawl_test.go  handlers.go  handlers_test.go
backend-go/internal/repository/: article_repository.go  categorize_repository.go  info_repository.go  repository_test.go
backend-go/internal/service/: article_service.go
backend-go/internal/spider/: parser.go  parser_test.go  service.go
backend/app/: __init__.py  config.py
backend/app/api/: articles.py  info.py  stats.py
backend/app/commands/: __init__.py  crawl.py
backend/app/models/: __init__.py  article.py  categorize.py  info.py
backend/app/spider/: __init__.py  client.py  parser.py  pipeline.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/components/Charts/: ArticleList.vue  CategoryPieChart.vue  HeatmapChart.vue  QuarterlyBarChart.vue  ReadMixChart.vue
frontend/src/styles/: global.css
frontend/src/types/: index.ts
(+5 files in other folders)
